fixed a bug where the notification count moves to the bottom right on smaller devices

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,7 +32,7 @@
 
    @media only screen and (max-width: $bp-smaller) {
       flex-wrap: wrap;
-      align-content: space-around;
+      // align-content: space-around;
       height: 12rem;
    }
 }
